# wealth-ledger

./: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: ci.yml  package.yml
android/app/: build.gradle.kts
deploy/: finwealth-server.env.example
deploy/systemd/: finwealth-server.service
docs/contracts/: AI_PROPOSAL_SCHEMA_V1.md  API_MOCK_STUB_PLAN_V1.md  APPLICATION_INTERFACES_V1.md  BACKEND_INTERFACE_IMPLEMENTATION_PLAN_V1.md  CORE_PORTS_V1.md  DATA_SCHEMA_V1.md  FRONTEND_API_INTEGRATION_HANDOFF_V1.md  HTTP_API_V1.md  LOCAL_LEDGER_FORMAT_V1.md  QUOTE_RATE_CONTRACT_V1.md  README.md  SYNC_API_DRAFT.md  openapi_v1.yaml
docs/deploy/: VPS_DEPLOYMENT.md
legacy/: README.md
legacy/design/: HOW_TO_USE_OTHER_MODELS.md  SKILL.md  current-design-tokens-seed.md
lib/: main.dart
lib/app/: app.dart  home_shell.dart  router.dart
lib/core/: env.dart  format.dart  types.dart
lib/data/: api_mock_repositories.dart  auth_repositories.dart  auth_store.dart  auth_token_store_io.dart  providers.dart  (+4 more)
server/: README.md  dev_server.py
server-rs/: Cargo.toml  README.md
server-rs/src/: local_ledger.rs  main.rs
test/: api_mock_mapping_test.dart  auth_client_test.dart  record_forms_test.dart  widget_test.dart
tools/: backup_local_ledger.ps1  backup_vps_ledger.sh  contract_check.py  doctor.ps1  install_vps_systemd.sh  local_ledger_smoke.py  mock_api_server.py  package_release.ps1  restore_local_ledger.ps1  restore_vps_ledger.sh  run_local_server.ps1  run_self_use_windows.ps1  run_windows_local.ps1  server_smoke.py
windows/: CMakeLists.txt
(+45 files in other folders)
