[package]
name = "finwealth-server"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = "0.8"
serde_json = "1"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
